--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "farmsys/Liability",
+  "name": "farmsys/liability",
   "type": "module",
   "description": "Liability entity type for farmsys.",
   "homepage": "https://github.com/recommendsmart/farmsys_liability",
