--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
   "type": "module",
   "description": "Liability entity type for farmsys.",
   "homepage": "https://github.com/recommendsmart/farmsys_liability",
-  "keywords": ["farmsys, liability"],
+  "keywords": ["farmsys_liability"],
   "license": "GPL-2.0+"
 }
